--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
-APP_ENV=production
-APP_KEY=base64:GoXsXzfhr7LQblf70Zpwdp+RP9ajdMTNpkS2xtPsatM=
+APP_ENV=local
+APP_KEY=
 APP_DEBUG=false
 APP_URL=http://localhost
 APP_COMPANY=Softlogic
