--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "vue-loader": "^15.9.7",
         "vue-moment": "^4.0",
         "vue-template-compiler": "^2.6.10",
-        "vue2-selectize": "^1.1"
+        "vue2-selectize": "^1.1",
+        "vue-sweetalert": "^0.1.18"
     }
 }
