--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
         "vue-template-compiler": "^2.6.10",
         "vue2-selectize": "^1.1",
         "vue-sweetalert": "^0.1.18"
+    },
+    "dependencies": {
+        "vue-excel-export": "^0.1.3",
+        "vuetable-2": "^2.0.0-beta.4"
     }
 }
