subiendo exportaciones en excel y pdf

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^7.3 || ^8.0.2",
+        "barryvdh/laravel-dompdf": "^2.0",
         "csgt/cancerbero": "^7.0-dev",
         "csgt/crud": "^6.0",
         "csgt/menu": "^7.0-dev",
@@ -17,6 +18,8 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "^2.0",
         "pusher/pusher-php-server": "^7.0"
     },
     "require-dev": {
