--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 .env.backup
 .phpunit.result.cache
 docker-compose.override.yml
+composer.lock
+package-lock.json
 Homestead.json
 Homestead.yaml
 npm-debug.log
