--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
         "vue-sweetalert": "^0.1.18"
     },
     "dependencies": {
+        "chart.js": "^3.9.1",
+        "vue-chartjs": "^4.1.1",
         "vue-excel-export": "^0.1.3",
         "vuetable-2": "^2.0.0-beta.4"
     }
