--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "chart.js": "^3.9.1",
         "vue-chartjs": "^4.1.1",
         "vue-excel-export": "^0.1.3",
+        "vue2-dropzone": "^3.6.0",
         "vuetable-2": "^2.0.0-beta.4"
     }
 }
